@@ -33,7 +33,6 @@ $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
 
 Mojo::Util::monkey_patch('CSS::Minifier::XS', minify => sub { die 'Nope!' });
 ok -e $file->path, 'cached file exists';
-$ENV{MOJO_ASSETPACK_CLEANUP} = 0;
 $t = t::Helper->t(pipes => [qw(Css Combine)]);
 $t->app->asset->process('app.css' => @assets);
 
@@ -41,7 +40,6 @@ $t->app->routes->get('/inline' => 'inline');
 $t->get_ok('/inline')->status_is(200)
   ->content_like(qr/\.one\{color.*\.two\{color.*.skipped\s\{/s);
 
-$ENV{MOJO_ASSETPACK_CLEANUP} = 1;
 done_testing;
 
 __DATA__
