@@ -13,8 +13,7 @@ $t->get_ok($t->tx->res->dom->at('script')->{src})->status_is(200)
 
 $t->get_ok('/asset/0bf00b0aa8/angular.min.js.map')->status_is(200);
 
-$ENV{MOJO_ASSETPACK_CLEANUP} = 0;
-$ENV{MOJO_MODE}              = 'production';
+$ENV{MOJO_MODE} = 'production';
 $t = t::Helper->t(pipes => [qw(Fetch Combine)]);
 $t->app->asset->process(
   'app.js' => 'https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js');
@@ -24,8 +23,6 @@ $t->get_ok($t->tx->res->dom->at('script')->{src})->status_is(200)
   ->content_like(qr{\QsourceMappingURL=../../asset/0bf00b0aa8/angular.min.js.map\E});
 
 $t->get_ok('/asset/0bf00b0aa8/angular.min.js.map')->status_is(200);
-
-$ENV{MOJO_ASSETPACK_CLEANUP} = 1;
 
 done_testing;
 
