@@ -14,8 +14,7 @@ $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
 
 $t->get_ok('/asset/986eed8dca/fontawesome-webfont_v_4_5_0.eot')->status_is(200);
 
-$ENV{MOJO_ASSETPACK_CLEANUP} = 0;
-$ENV{MOJO_MODE}              = 'production';
+$ENV{MOJO_MODE} = 'production';
 $t = t::Helper->t(pipes => [qw(Css Fetch Combine)]);
 $t->app->asset->process('app.css' =>
     'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
@@ -26,8 +25,6 @@ $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
   ->content_like(qr{\Qurl('../../asset/6484f1af6b/fontawesome-webfont_v_4_5_0.ttf')\E});
 
 $t->get_ok('/asset/986eed8dca/fontawesome-webfont_v_4_5_0.eot')->status_is(200);
-
-$ENV{MOJO_ASSETPACK_CLEANUP} = 1;
 
 done_testing;
 
